Fixed the spacing around the banner

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -791,6 +791,12 @@ a {
   .rails {
     padding-top: 10px;
   }
+  .banner {
+    margin-top: 20%;
+  }
+  .note {
+    margin-top: -30%;
+  }
 }
 @media (max-width: 1199.98px) {
   .header {
@@ -862,7 +868,7 @@ a {
     margin-top: 100px;
   }
   .note {
-    margin-top: 80px;
+    margin-top: -30%;
   }
 }
 @media (max-width: 991.98px) {
@@ -917,7 +923,7 @@ a {
     margin-top: 30%;
   }
   .note {
-    margin-top: 20%;
+    margin-top: -28%;
   }
   .brandImg {
     margin: 0 auto;
@@ -1018,7 +1024,7 @@ a {
     margin-top: 20px;
   }
   .note {
-    margin-top: 20%;
+    margin-top: -26%;
   }
   .backButton {
     margin: 42%;
@@ -1171,7 +1177,7 @@ a {
     margin-top: 50%;
   }
   .note {
-    margin-top: 30%;
+    margin-top: -26%;
   }
   .privacy {
     font-size: 1.8em;
@@ -1247,7 +1253,7 @@ a {
     margin-top: 50%;
   }
   .banner {
-    margin-top: 70%;
+    margin-top: 60%;
     background-color: #fdff00;
   }
   .banner h4 {
@@ -1263,7 +1269,7 @@ a {
     padding-bottom: 3%;
   }
   .note {
-    margin-top: 40%;
+    margin-top: -20%;
   }
 }
 @media (max-width: 365.98px) {
@@ -1300,10 +1306,10 @@ a {
     margin-top: 50%;
   }
   .note {
-    margin-top: 20%;
+    margin-top: -20%;
   }
   .banner {
-    margin-top: 90%;
+    margin-top: 80%;
     background-color: #fdff00;
   }
   .banner h4 {
